# executor-core

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  release-plz.toml
.github/workflows/: ci.yml  release.yml  test.yml
examples/: basic.rs  error_handling.rs
src/: async_executor.rs  async_task.rs  lib.rs  mailbox.rs  smol.rs  tokio.rs  web.rs
tests/: mailbox.rs  type_erased.rs
