[package]
name = "executor-core"
version = "0.5.0"
authors = ["Lexo Liu <me@lexo.cool>"]
edition = "2024"
description = "A zero-cost task executor abstraction layer for Rust async runtimes"
repository = "https://github.com/lexoliu/executor-core"
documentation = "https://docs.rs/executor-core"
homepage = "https://github.com/lexoliu/executor-core"
license = "MIT"
keywords = ["async", "executor", "runtime", "futures", "tokio"]
categories = ["asynchronous", "concurrency", "no-std"]
readme = "README.md"

[badges]
maintenance = { status = "actively-developed" }
license = { file = "LICENSE" }


[package.metadata.docs.rs]
features = ["async-executor", "tokio", "std", "web"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
async-channel = { version = "2.5.0", default-features = false }
async-task = { version = "4.7", default-features = false}
pin-project-lite = { version = "0.2", default-features = false}

[dependencies.async-executor]
version = "1.13.2"
optional = true

[dependencies.tokio]
version = "1.45"
default-features = false
features = ["rt", "rt-multi-thread"]
optional = true

# Dependencies for `web` backend

[dependencies.wasm-bindgen-futures]
version = "0.4.5"
optional = true

[features]
default = []
std = []
async-executor = ["dep:async-executor", "std"]
tokio = ["dep:tokio", "std"]
web = ["dep:wasm-bindgen-futures"]

# Feature flag for enabling all compatible features
full = ["std", "async-executor", "tokio"]

[dev-dependencies]
tokio = { version = "1.45", features = [
    "macros",
    "time",
    "rt",
    "rt-multi-thread",
] }
futures-lite = "2.3"
