[package]
name = "executor-core"
version = "0.7.0"
authors = ["Lexo Liu <me@lexo.cool>"]
edition = "2024"
rust-version = "1.85.1"
description = "A zero-cost task executor abstraction layer for Rust async runtimes"
repository = "https://github.com/lexoliu/executor-core"
documentation = "https://docs.rs/executor-core"
homepage = "https://github.com/lexoliu/executor-core"
license = "MIT"
keywords = ["async", "executor", "runtime", "futures", "tokio"]
categories = ["asynchronous", "concurrency", "no-std"]
readme = "README.md"

[badges]
maintenance = { status = "actively-developed" }
license = { file = "LICENSE" }


[package.metadata.docs.rs]
features = ["async-task", "async-executor", "tokio", "std"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
async-channel = { version = "2.5.0", default-features = false }
pin-project-lite = { version = "0.2", default-features = false}
smol = { version = "2.0.2", default-features = false, optional = true }
take_mut = "0.2.2"

[dependencies.async-task]
version = "4.7"
default-features = false
optional = true
features = []

[dependencies.async-executor]
version = "1.13.2"
optional = true

[dependencies.tokio]
version = "1.45"
default-features = false
features = ["rt", "rt-multi-thread"]
optional = true

[features]
default = ["std"]
std = ["async-task?/std"]
async-task = ["dep:async-task"]
async-executor = ["dep:async-executor", "async-task", "std"]
smol = ["dep:smol"]
tokio = ["dep:tokio", "std"]

# Feature flag for enabling all compatible features
full = ["std", "async-task", "async-executor", "tokio"]

[dev-dependencies]
tokio = { version = "1.45", features = [
    "macros",
    "time",
    "rt",
    "rt-multi-thread",
] }
futures-lite = "2.3"
